--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <body>
     <div>
       <p>
-        <marquee>Hello</marquee>
+      <h1><marquee>Hello</marquee></h1>
       </p>
     </div>
   </body>
