--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <body>
     <div>
       <p>
-      <h1><marquee>Hello</marquee></h1>
+        <font size="+6">Hello!</font>
+        <!--<h1><marquee>Hello</marquee></h1>-->
       </p>
     </div>
   </body>
