--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
+<!DOCTYPE html>
 <html>
-  <title> WebSite </title>
+    <title> WebSite </title>
+    <head>
+      <style>
+        p.ex2 {
+          font-size: 100px;
+        }
+      </style>
+    </head>
   <body>
-    <div>
-      <p>
-        <font size="+6">Hello!</font>
-        <!--<h1><marquee>Hello</marquee></h1>-->
-      </p>
-    </div>
+    <p class="ex2">Hello!</p>
   </body>
 </html>
