--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <head>
       <style>
         p.ex2 {
-          font-size: 100px;
+          font-size: 300px;
+          text-align:center
         }
       </style>
     </head>
