--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <title> WebSite </title>
+    <title> Zeba Shabbir </title>
     <head>
       <style>
         p.ex2 {
