--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 				<p>I was waiting for</p>
 				<p>Since our Marriage</p>
 				<p><strong>So special to me, so special to you</strong></p>
-				<p>On this day..?</p>
+				<p>On this day..</p>
 				<p>I will speak my heart out</p>
 				<p>Very few people</p>
 				<p>Meet their soul mates</p>
