--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 				<p>Every day ...</p>
 				<p>Thanking my Lord</p>
 				<p>Every day...</p>
-				<p>Let’s make this /p>
+				<p>Let’s make this</p>
 				<p>A birthday to remember</p>
 				<p>And pray that, the years to come</p>
 				<p>Are more happier for us inshaAllah</p>
